# DeepTopo

./: .gitignore  README.md  pyproject.toml  setup.cfg
deeptopo/models/: activations.py  embeddings.py  networks.py
deeptopo/ntk/: demo.py  demo_theoretical_ntk.py  empirical_ntk.py  ntk_visualization.py  theoretical_ntk.py
deeptopo/topoptim/: demo.py  loadcase.py  loadcase_zoo.py  topopt2D.py  topopt_utils.py
deeptopo/training/: demo.py  trainer.py  training_utils.py
test/: test_basic.py  test_models.py  test_ntk.py  test_theoretical_ntk.py  test_topoptim.py
topoptim/: loadcase.py  topopt2D.py
