[tool.poetry]
name = "deeptopo"
version = "0.1.0"
description = "\"Implementation of DNN-based topology optimisation\""
authors = ["benjiDupuis <benjamin.dupuis@polytechnique.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
autopep8 = "^1.5.7"
pdbpp = "^0.10.2"
fire = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
